# otter

./: .devcontainer.json  Dockerfile  docker-compose.yml  pyproject.toml
pipeline/demo/: otter_image.ipynb
pipeline/mimicit_utils/: mimicview_dataset.py
pipeline/train/: data.py  instruction_following_with_validation.py
