[tool.poetry]
name = "otter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "otter_ai", from = "src" },
]

[tool.poetry.dependencies]
python = "3.9.16"
accelerate = ">=0.19.0"
braceexpand = ">=0.1.7"
einops = ">=0.6.1"
einops-exts = ">=0.0.4"
fastapi = ">=0.95.2"
gradio = ">=3.33.1"
huggingface-hub = ">=0.13.3"
importlib-metadata = ">=6.6.0"
inflection = ">=0.5.1"
markdown2 = ">=2.4.8"
more-itertools = ">=9.1.0"
nltk = ">=3.8.1"
numpy = ">=1.23.5"
open-clip-torch = ">=2.16.0"
opencv-python-headless = ">=4.5.5.64"
pillow = ">=9.5.0"
pycocoevalcap = ">=1"
pycocotools = ">=2.0.6"
requests = ">=2.31.0"
scipy = ">=1.10.1"
timm = ">=0.9.2"
tqdm = ">=4.65.0"
transformers = "4.29.0"
uvicorn = ">=0.22.0"
webdataset = ">=0.2.48"
xformers = ">=0.0.20"
natsort = ">=8.4.0"
peft = ">=0.4.0"
litellm = "0.1.400"
ijson = ">=3.2.3"
yajl = ">=0.3.5"
deepspeed = ">=0.10.0"
wandb = ">=0.15.8"
trl = ">=0.5.0"
pyyaml = ">=6.0.1"
torch = {version = "2.0.1", source = "torch_cu118"}
torchvision = {version = "0.15.2", source = "torch_cu118"}
torchaudio = {version = "2.0.2", source = "torch_cu118"}
triton = {version = "2.0.0", source = "torch_cu118"}


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
